--- a/index.css
+++ b/index.css
@@ -7,3 +7,20 @@ body{
 .border{
     border-color: gray;
 }
+
+.addingColor,.first-class{
+    background-color: #B4F461;
+    color: black;
+    font-weight: 600;
+    border: none;
+    font-size: 20px;
+    border: none;
+}
+
+.removingColor{
+    border: 1px solid rgba(17, 17, 17, 0.3);
+    color:#111111B3;
+    font-size: 20px;
+    font-weight: 500;
+}
+
